adds 0-indexed d10 and d100s, updates to dockerfile/secure ws connection

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<div>
 					<button id="clear" title="Reset Dice">❌</button>
 					<button id="save" title="Save Favorite">❤️</button>
-					<input type="text" id="set" name="set" value="2d20"></input>
+					<input type="text" id="set" name="set" value="1d00 + 1d0"></input>
 					<button id="rage" title="Add Rage">💢</button>
 					<button id="throw" title="Throw Dice">🎲</button>
 				</div>
